[project]
name = "kode"
version = "0.7.0"
description = "A TUI agentic coding tool powered by OpenRouter"
license = {file = "LICENSE"}
requires-python = ">=3.11"
dependencies = ["requests", "rich", "prompt_toolkit"]

[project.scripts]
kode = "agent:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["agent", "tools", "checkpoint"]
